--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
+<link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
 
 <h1>Homepage</h1>
 
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a href="index.html">&#10052; Home</a></li>
 		<li><a href="bio.html">Bio</a></li>
 		<li><a href="resume.html">Resume</a></li>
 	</ul>
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, nulla, soluta, est, dignissimos nesciunt fuga earum sunt amet facere repellat cupiditate provident ratione deleniti quasi doloremque nam repellendus. Aliquam, quasi.</p>
 
 
 </body>
