--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
+<link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
 
@@ -13,6 +16,8 @@
 		<li><a href="bio.html">Bio</a></li>
 		<li><a href="resume.html">Resume</a></li>
 	</ul>
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, nulla, soluta, est, dignissimos nesciunt fuga earum sunt amet facere repellat cupiditate provident ratione deleniti quasi doloremque nam repellendus. Aliquam, quasi.</p>
 
 
 </body>
