--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<li><a href="resume.html">Resume</a></li>
 	</ul>
 
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, nulla, soluta, est, dignissimos nesciunt fuga earum sunt amet facere repellat cupiditate provident ratione deleniti quasi doloremque nam repellendus. Aliquam, quasi.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
 
 
 </body>
