--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<li><a href="resume.html">Resume</a></li>
 	</ul>
 
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adding to this paragraph.</p>
 
 
 </body>
