--- a/resume.html
+++ b/resume.html
@@ -12,9 +12,9 @@
 <h1>Resume</h1>
 
 	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="bio.html">Bio</a></li>
-		<li><a href="resume.html">Resume</a></li>
+		<li><a href="index.html">&#10057;Home</a></li>
+		<li><a href="bio.html">&#10057;Bio</a></li>
+		<li><a href="resume.html">&#10057;Resume</a></li>
 	</ul>
 
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, nulla, soluta, est, dignissimos nesciunt fuga earum sunt amet facere repellat cupiditate provident ratione deleniti quasi doloremque nam repellendus. Aliquam, quasi.</p>
