--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <h1>Homepage</h1>
 
 	<ul>
-		<li><a href="index.html">&#10057;Home</a></li>
-		<li><a href="bio.html">&#10057;Bio</a></li>
-		<li><a href="resume.html">&#10057;Resume</a></li>
+		<li><a href="index.html" class="home">&#10057;Home</a></li>
+		<li><a href="bio.html" class="bio">&#10057;Bio</a></li>
+		<li><a href="resume.html" class="resume">&#10057;Resume</a></li>
 	</ul>
 
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adding to this paragraph.</p>
